--- a/Letter_to_Pythocles_Usener.html
+++ b/Letter_to_Pythocles_Usener.html
@@ -250,7 +250,20 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 ἀφ᾽ οὗ πάλιν ἀπολάμποντος τὰ ὁμοροῦντα τοῦ ἀέρος χρῶσιν τοιαύτην λήψεται, οἵαν θεωροῦμεν, κατὰ πρόσλαμψιν πρὸς τὰ μέρη.
 
-[110]
+[110] Τὸ δὲ τῆς περιφερείας τοῦτο φάντασμα γίνεται διὰ τὸ τὸ διάστημα πάντοθεν ἴσον ὑπὸ τῆς ὄψεως θεωρεῖσθαι, ἢ σύνωσιν τοιαύτην λαμβανουσῶν τῶν ἐν τῷ ἀέρι ἀτόμων ἢ ἐν τοῖς νέφεσιν ἀπὸ τοῦ ἡλίου ἀποφερομένων περιφέρειάν τινα καθίεσθαι τὴν σύγκρισιν ταύτην.
+</p>
+<p class="indent">
+Ἅλως περὶ τὴν σελήνην γίνεται καὶ πάντοθεν ἀέρος προσφερομένου πρὸς τὴν σελήνην ἢ τὰ ἀπ᾽ αὐτῆς ῥεύματα ἀποφερόμενα ὁμαλῶς ἀναστέλλοντος ἐπὶ τοσοῦτον ἐφ᾽ ὅσον κύκλῳ περιστῆσαι εἰς τὸ νεφοειδὲς τοῦτο καὶ μὴ τὸ παράπαν διακρῖναι, ἢ καὶ τὸν πέριξ ἀέρα αὐτῆς ἀναστέλλοντος συμμέτρως πάντοθεν εἰς τὸ περιφερὲς τὸ περὶ αὐτὴν καὶ παχυμερὲς περιστῆσαι.
+
+[111] ὃ γίνεται κατὰ μέρη τινὰ ἤτοι ἔξωθεν βιασαμένου τινὸς ῥεύματος ἢ τῆς θερμασίας ἐπιτηδείων πόρων ἐπιλαμβανομένης εἰς τὸ τοῦτο ἀπεργάσασθαι.
+</p>
+<p class="indent">
+Κομῆται ἀστέρες γίνονται ἤτοι πυρὸς ἐν τόποις τισὶ διὰ χρόνων τινῶν ἐν τοῖς μετεώροις συντρεφομένου περιστάσεως γινομένης, ἢ ἰδίαν τινὰ κίνησιν διὰ χρόνων τοῦ οὐρανοῦ ἴσχοντος ὑπὲρ ἡμᾶς, ὥστε τὰ τοιαῦτα ἄστρα ἀναφανῆναι [ἢ αὐτὰ ἐν χρόνοις τισὶν ὁρμῆσαι διά τινα περίστασιν καὶ εἰς τοὺς καθ᾽ ἡμᾶς τόπους ἐλθεῖν καὶ ἐκφανῆ γενέσθαι.
+
+τήν τε ἀφάνισιν τούτων γίνεσθαι παρὰ τὰς ἀντικειμένας ταύταις αἰτίας].
+</p>
+<p class="indent">
+[112]
 </p>
 <br>
 <br>
