Started Bailey Pythocles

--- a/Letter_to_Pythocles_Usener.html
+++ b/Letter_to_Pythocles_Usener.html
@@ -28,7 +28,7 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 <p class="indent">
 [84] Ἤνεγκέ μοι Κλέων ἐπιστολὴν παρὰ σοῦ, ἐν ᾗ φιλοφρονούμενός τε περὶ ἡμᾶς διετέλεις ἀξίως τῆς ἡμετέρας περὶ σεαυτὸν σπουδῆς καὶ οὐκ ἀπιθάνως ἐπειρῶ μνημονεύειν τῶν εἰς μακάριον βίον συντεινόντων διαλογισμῶν, ἐδέου τε σεαυτῷ περὶ τῶν μετεώρων σύντομον καὶ εὐπερίγραφον διαλογισμὸν ἀποστεῖλαι, ἵνα ῥᾳδίως μνημονεύῃς·
 
-τὰ γὰρ ἐν ἄλλοις ἡμῖν γεγραμμένα δυσμνημόνευτα εἶναι, καί τοι, ὡς ἔφης, συνεχῶς αὐτὰ βαστάζοντι. 
+τὰ γὰρ ἐν ἄλλοις ἡμῖν γεγραμμένα δυσμνημόνευτα εἶναι, καί τοι, ὡς ἔφης, συνεχῶς αὐτὰ βαστάζοντι.
 
 ἧμεις δὲ ἡδέως τε σοῦ τὴν δέησιν ἀπεδεξάμεθα καὶ ἐλπίσιν ἡδείαις συνεσχέθημεν.
 
@@ -263,7 +263,54 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 τήν τε ἀφάνισιν τούτων γίνεσθαι παρὰ τὰς ἀντικειμένας ταύταις αἰτίας].
 </p>
 <p class="indent">
-[112]
+[112] Τινὰ ἄστρα στρέφεσθαι αὐτοῦ συμβαίνει οὐ μόνον τῷ τὸ μέρος τοῦτο τοῦ κόσμου ἑστάναι, περὶ ὃ τὸ λοιπὸν στρέφεται, καθά περ τινές φασιν, ἀλλὰ καὶ τῷ δίνην ἀέρος ἔγκυκλον αὐτῷ περιεστάναι, ἣ κωλυτικὴ γίνεται τοῦ περιπολεῖν ὡς καὶ τὰ ἄλλα·
+
+ἢ καὶ διὰ τὸ ἑξῆς μὲν αὐτοῖς ὕλην ἐπιτηδείαν μὴ εἶναι, ἐν δὲ τούτῳ τῷ τόπῳ ἐν ᾧ κείμενα θεωρεῖται.
+
+καὶ κατ᾽ ἄλλους δὲ πλείονας τρόπους τοῦτο δυνατὸν συντελεῖσθαι, ἐάν τις δύνηται τὸ σύμφωνον τοῖς φαινομένοις συλλογίζεσθαι.
+</p>
+<p class="indent">
+Τινὰ τῶν ἄστρων πλανᾶσθαι, εἰ οὕτω ταῖς κινήσεσι χρώμενα συμβαίνει,
+
+[113] τινὰ δ᾽ ὁμαλῶς κινεῖσθαι ἐνδέχεται μὲν καὶ παρὰ τὸ κύκλῳ κινούμενα ἐξ ἀρχῆς οὕτω κατηγαγκάσθαι, ὥστε τὰ μὲν κατὰ τὴν αὐτὴν δίνην φέρεσθαι ὁμαλῆ οὖσαν, τὰ δὲ κατά τινα δίνησιν ἀνωμαλίαις χρωμένην·
+
+ἐνδέχεται δὲ καὶ καθ᾽ οὓς τόπους φέρεται οὗ μὲν παρεκτάσεις ἀέρος εἶναι ὁμαλεῖς ἐπὶ τὸ αὐτὸ συνωθούσας κατὰ τὸ ἑξῆς ὁμαλῶς τε ἐκκαούσας, οὗ δὲ ἀνωμαλεῖς οὕτως ὥστε τὰς θεωρουμένας παραλλαγὰς συντελεῖσθαι.
+
+τὸ δὲ μίαν αἰτίαν τούτων ἀποδιδόναι, πλεοναχῶς τῶν φαινομένων ἐκκαλουμένων, μανικὸν καὶ οὐ καθηκόντως πραττόμενον ὑπὸ τῶν τὴν ματαίαν ἀστρολογίαν ἐζηλωκότων καὶ εἰς τὸ κενὸν αἰτίας ἄστρων ἀποδιδόντων, ὅταν τὴν θείαν φύσιν μηθαμῇ λειτουργιὼν ἀπολύωσι.
+
+[114] Τινὰ ἄστρα ὑπολειπόμενα τινῶν θεωρεῖσθαι συμβαίνει καὶ παρὰ τὸ βραδύτερον συμπεριφέρεσθαι τὸν αὐτὸν κύκλον περιιόντα, καὶ παρὰ τὸ τὴν ἐναντίαν κινεῖσθαι ἀντισπώμενα ὑπὸ τοιαύτης δίνης·
+
+καὶ παρὰ τὸ περιφέρεσθαι τὰ μὲν διὰ πλείονος τόπου, τὰ δὲ δι᾽ ἐλάττονος, τὴν αὐτὴν δίνην περικυκλοῦντα.
+
+τὸ δὲ ἁπλῶς ἀποφαίνεσθαι περὶ τούτων καθῆκόν ἐστι τοῖς τερατεύεσθαί τι πρὸς τοὺς πολλοὺς βουλομένοις.
+</p>
+<p class="indent">
+Οἱ λεγόμενοι ἀστέρες ἐκπίπτειν καὶ παρὰ μέρος κατὰ παράτριψιν νεφῶν δύνανται συντελεῖσθαι καὶ πυρὸς ἔκπτωσιν οὗ ἂν ἡ ἐκπνευμάτωσις γένηται, καθά περ καὶ ἐπὶ τῶν ἀστραπῶν ἐλέγομεν·
+
+[115] καὶ κατὰ σύνοδον δὲ ἀτόμων πυρὸς ἀποτελεστικῶν, συμφυλίας γενομένης εἰς τὸ τοῦτο τελέσαι, καὶ κίνησιν οὗ ἂν ἡ ὁρμὴ ἐξ ἀρχῆς κατὰ τὴν σύνοδον γένηται·
+
+καὶ κατὰ πνεύματος δὲ συλλογὴν ἐν πυκνώμασί τισιν ὀμιχλοειδέσι καὶ ἐκπύρωσιν τούτου διὰ τὴν κατείλησιν, εἶτ᾽ ἐπέκρηξιν τῶν περιεχόντων, καὶ ἐφ᾽ ὃν ἂν τόπον ἡ ὁρμὴ γένηται τῆς φορᾶς, εἰς τοῦτον φερομένου.
+
+καὶ ἄλλοι δὲ τρόποι εἰς τὸ τοῦτο τελέσαι ἀνύσιμοί εἰσιν.
+</p>
+<p class="indent">
+Αἱ δ᾽ ἐπισημασίαι αἱ γινόμεναι ἐπί τισι ζῴοις κατὰ συγκύρημα γίνονται τοῦ καιροῦ.
+
+οὐ γὰρ τὰ ζῷα ἀνάγκην τινὰ προσφέρεται τοῦ ἀποτελεσθῆναι χειμῶνα, οὐδὲ κάθηταί τις θεία φύσις παρατηροῦσα τὰς τῶν ζῴων τούτων 
+ἐξόδους κἄπειτα τὰς ἐπισημασίας ταύτας ἐπιτελεῖ·
+
+[116] οὐδὲ γὰρ εἰς τὸ τυχὸν ζῷον κἂν &lt;εἰ&gt; μικρὸν χαριέστερον εἴη, τοιαύτη μωρία ἐμπέσοι, μὴ ὅτι εἰς παντελῆ εὐδαιμονίαν κεκτημένον.
+</p>
+<p class="indent">
+Ταῦτα δὴ πάντα, Πυθόκλεις, μνημόνευσον·
+
+κατὰ πολύ τε γὰρ τοῦ μύθου ἐκβήσῃ καὶ τὰ ὁμογενῆ τούτοις συνορᾶν δυνήσῃ.
+
+μάλιστα δὲ σεαυτὸν ἀπόδος εἰς τὴν τῶν ἀρχῶν καὶ ἀπειρίας καὶ τῶν συγγενῶν τούτοις θεωρίαν, ἔτι δὲ κριτηρίων καὶ παθῶν, καὶ οὗ ἕνεκεν ταῦτα ἐκλογιζόμεθα. 
+
+ταῦτα γὰρ μάλιστα συνθεωρούμενα ῥᾳδίως τὰς περὶ τῶν κατὰ μέρος αἰτίας συνορᾶν ποιήσει.
+
+οἱ δὲ ταῦτα μὴ καταγαπήσαντες ᾗ μάλιστα οὔτ᾽ &lt;ἂv&gt; αὐτὰ ταῦτα καλῶς συνθεωρήσαιεν οὔτε οὗ ἕνεκεν δεῖ θεωρεῖν ταῦτα περιεποιήσαντο.
 </p>
 <br>
 <br>
