--- a/Letter_to_Pythocles_Bailey_Bilingual (master).html
+++ b/Letter_to_Pythocles_Bailey_Bilingual (master).html
@@ -58,10 +58,98 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [85]
+        [85] γράψαντες οὖν τὰ λοιπὰ πάντα συντελοῦμεν ἅπερ ἠξίωσας πολλοῖς καὶ ἄλλοις ἐσόμενα χρήσιμα τὰ διαλογίσματα ταῦτα, καὶ μάλιστα τοῖς νεωστὶ φυσιολογίας γνησίου γευομένοις καὶ τοῖς εἰς ἀσχολίας βαθυτέρας τῶν ἐγκυκλίων τινὸς ἐμπεπλεγμένοις.
     </td>
     <td> 
-        [85]
+        [85] Therefore, as I have finished all my other writings I now intend to accomplish your request, feeling that these arguments will be of value to many other persons as well, and especially to those who have but recently tasted the genuine inquiry into nature, and also to those who are involved too deeply in the business of some regular occupation.
+    </td>
+</tr>
+<tr>
+    <td>
+        καλῶς δὴ αὐτὰ διάλαβε, καὶ διὰ μνήμης ἔχων ὀξέως αὐτὰ περιόδευε μετὰ τῶν λοιπῶν ὧν ἐν τῇ μικρᾷ ἐπιτομῇ πρὸς Ἡρόδοτον ἀπεστείλαμεν.
+    </td>
+    <td> 
+        Therefore lay good hold on it, keep it in mind, and go through it all keenly, together with the rest which I sent in the small epitome to Herodotus.
+    </td>
+</tr>
+<tr>
+    <td>
+        Πρῶτον μὲν οὖν μὴ ἄλλο τι τέλος ἐκ τῆς περὶ μετεώρων γνώσεως εἴτε κατὰ συναφὴν λεγομένων εἴτε αὐτοτελῶς νομίζειν εἶναι ἤ περ ἀταραξίαν καὶ πίστιν βέβαιον, καθάπερ καὶ ἐπὶ τῶν λοιπῶν.
+    </td>
+    <td> 
+        First of all then we must not suppose that any other object is to be gained from the knowledge of the phenomena of the sky, whether they are dealt with in connexion with other doctrines or independently, than peace of mind and a sure confidence, just as in all other branches of study.
+    </td>
+</tr>
+<tr>
+    <td>
+        [86] μήτε τὸ ἀδύνατον καὶ παραβιάζεσθαι μήτε ὁμοίαν κατὰ πάντα τὴν θεωρίαν ἔχειν ἢ τοῖς περὶ βίων λόγοις ἢ τοῖς κατὰ τὴν τῶν ἄλλων φυσικῶν προβλημάτων κάθαρσιν, οἷον ὅτι τὸ πᾶν σώματα καὶ ἀναφὴς φύσις ἐστὶν ἢ ὅτι ἄτομα &lt;τὰ&gt; στοιχεῖα, καὶ πάντα τὰ τοιαῦτα δὴ ὅσα μοναχὴν ἔχει τοῖς φαινομένοις συμφωνίαν·
+    </td>
+    <td> 
+        [86] We must not try to force an impossible explanation, nor employ a method of inquiry like our reasoning either about the modes of life or with respect to the solution of other physical problems: witness such propositions as that 'the universe consists of bodies and the intangible', or that 'the elements are indivisible', and all such statements in circumstances where there is only one explanation which harmonizes with phenomena.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὅπερ ἐπὶ τῶν μετεώρων οὐχ ὑπάρχει, ἀλλὰ ταῦτά γε πλεοναχὴν ἔχει καὶ τῆς γενέσεως αἰτίαν καὶ τῆς οὐσίας ταῖς αἰσθήσεσι σύμφωνον κατηγορίαν.
+    </td>
+    <td> 
+        For this is not so with the things above us: they admit of more than one cause of coming into being and more than one account of their nature which harmonizes with our sensations.
+    </td>
+</tr>
+<tr>
+    <td>
+        οὐ γὰρ κατὰ ἀξιώματα κενὰ καὶ νομοθεσίας φυσιολογητέον, ἀλλ᾽ ὡς τὰ φαινόμενα ἐκκαλεῖται·
+    </td>
+    <td> 
+        For we must not conduct scientific investigation by means of empty assumptions and arbitrary principles, but follow the lead of phenomena:
+    </td>
+</tr>
+<tr>
+    <td>
+        [87] οὐ γὰρ ἤδη ἀλογίας καὶ κενῆς δόξης ὁ βίος ἡμῶν ἔχει χρείαν, ἀλλὰ τοῦ ἀθορύβως ἡμᾶς ζῆν.
+    </td>
+    <td> 
+        [87] for our life has not now any place for irrational belief and groundless imaginings, but we must live free from trouble.
+    </td>
+</tr>
+<tr>
+    <td>
+        πάντα μὲν οὖν γίνεται ἀσείστως κατὰ πάντων &lt;τῶν&gt; κατὰ πλεοναχὸν τρόπον ἐκκαθαιρομένων συμφώνως τοῖς φαινομένοις, ὅταν τις τὸ πιθανολογούμενον ὑπὲρ αὐτῶν δεόντως καταλίπῃ·
+    </td>
+    <td> 
+        Now all goes on without disturbance as far as regards each of those things which may be explained in several ways so as to harmonize with what we perceive, when one admits, as we are bound to do, probable theories about them.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὅταν δέ τις τὸ μὲν ἀπολίπῃ, τὸ δ᾽ ἐκβάλῃ ὁμοίως σύμφωνον ὂν τῷ φαινομένῳ, δῆλον ὅτι καὶ ἐκ παντὸς ἐκπίπτει φυσιολογήματος, ἐπὶ δὲ τὸν μῦθον καταρρεῖ.
+    </td>
+    <td> 
+        But when one accepts one theory and rejects another, which harmonizes well with the phenomenon, it is obvious that he altogether leaves the path of scientific inquiry and has recourse to myth.
+    </td>
+</tr>
+<tr>
+    <td>
+        σημεῖα δ᾽ ἐπὶ τῶν ἐν τοῖς μετεώροις συντελουμένων φέρειν τῶν παρ᾽ ἡμῖν τινα φαινομένων, ἃ θεωρεῖται ᾗ ὑπάρχει, καὶ οὐ τὰ ἐν μετεώροις φαινόμενα·
+    </td>
+    <td> 
+        Now we can obtain indications of what happens above from some of the phenomena on earth: for we can observe how they come to pass, though we cannot observe the phenomena in the sky:
+    </td>
+</tr>
+<tr>
+    <td>
+        ταῦτα γὰρ ἐνδέχεται πλεοναχῶς γενέσθαι.
+    </td>
+    <td> 
+        for they may be produced in several ways.
+    </td>
+</tr>
+<tr>
+    <td>
+        [88]
+    </td>
+    <td> 
+        [88]
     </td>
 </tr>
 </table>
