--- a/Letter_to_Pythocles_Usener.html
+++ b/Letter_to_Pythocles_Usener.html
@@ -32,8 +32,7 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 ἧμεις δὲ ἡδέως τε σοῦ τὴν δέησιν ἀπεδεξάμεθα καὶ ἐλπίσιν ἡδείαις συνεσχέθημεν.
 
-[85] γράψαντες οὖν τὰ λοιπὰ πάντα συντελοῦμεν ἅπερ ἠξίωσας πολλοῖς καὶ ἄλλοις ἐσόμενα χρήσιμα τὰ διαλογίσματα ταῦτα, καὶ μάλιστα τοῖς νεωστὶ φυσιολογίας γνησίου γευομένοις καὶ τοῖς εἰς ἀσχολίας 
-βαθυτέρας τῶν ἐγκυκλίων τινὸς ἐμπεπλεγμένοις.
+[85] γράψαντες οὖν τὰ λοιπὰ πάντα συντελοῦμεν ἅπερ ἠξίωσας πολλοῖς καὶ ἄλλοις ἐσόμενα χρήσιμα τὰ διαλογίσματα ταῦτα, καὶ μάλιστα τοῖς νεωστὶ φυσιολογίας γνησίου γευομένοις καὶ τοῖς εἰς ἀσχολίας βαθυτέρας τῶν ἐγκυκλίων τινὸς ἐμπεπλεγμένοις.
 
 καλῶς δὴ αὐτὰ διάλαβε, καὶ διὰ μνήμης ἔχων ὀξέως αὐτὰ περιόδευε μετὰ τῶν λοιπῶν ὧν ἐν τῇ μικρᾷ ἐπιτομῇ πρὸς Ἡρόδοτον ἀπεστείλαμεν.
 </p>
@@ -50,11 +49,11 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 πάντα μὲν οὖν γίνεται ἀσείστως καὶ πάντων κατὰ πλεοναχὸν τρόπον ἐκκαθαιρομένων συμφώνως τοῖς φαινομένοις, ὅταν τις τὸ πιθανολογούμενον ὑπὲρ αὐτῶν δεόντως καταλίπῃ·
 
-ὅταν τις τὸ πιθανολογούμενον ὑπὲρ αὐτῶν δεόντως καταλίπῃ·
-
 ὅταν δέ τις τὸ μὲν ἀπολίπῃ, τὸ δὲ ἐκβάλῃ ὁμοίως σύμφωνον ὂν τῷ φαινομένῳ, δῆλον ὅτι καὶ ἐκ παντὸς ἐκπίπτει φυσιολογήματος, ἐπὶ δὲ τὸν μῦθον καταρρεῖ.
 
-σημεῖα δ᾽ ἐπὶ τῶν ἐν τοῖς μετεώροις συντελουμένων φέρειν τῶν παρ᾽ ἡμῖν τινα φαινομένων, ἃ θεωρεῖται ᾗ ὑπάρχει, καὶ οὐ τὰ ἐν τοῖς μετεώροις φαινόμενα ταῦτα γὰρ ἐνδέχεται πλεοναχῶς γενέσθαι.
+σημεῖα δ᾽ ἐπὶ τῶν ἐν τοῖς μετεώροις συντελουμένων φέρειν τῶν παρ᾽ ἡμῖν τινα φαινομένων, ἃ θεωρεῖται ᾗ ὑπάρχει, καὶ οὐ τὰ ἐν τοῖς μετεώροις φαινόμενα·
+
+ταῦτα γὰρ ἐνδέχεται πλεοναχῶς γενέσθαι.
 
 [88] τὸ μέντοι φάντασμα ἑκάστου τηρητέον καὶ ἔτι τὰ συναπτόμενα τούτῳ διαιρετέον, ἃ οὐκ ἀντιμαρτυρεῖται τοῖς παρ᾽ ἡμῖν γινομένοις πλεοναχῶς συντελεῖσθαι.
 </p>
