--- a/Letter_to_Pythocles_Bailey_Bilingual (master).html
+++ b/Letter_to_Pythocles_Bailey_Bilingual (master).html
@@ -146,10 +146,154 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [88]
+        [88] τὸ μέντοι φάντασμα ἑκάστου τηρητέον καὶ ἐπὶ τὰ συναπτόμενα τούτῳ διαιρετέον, ἃ οὐκ ἀντιμαρτυρεῖται τοῖς παρ᾽ ἡμῖν γινομένοις πλεοναχῶς συντελεῖσθαι.
     </td>
     <td> 
-        [88]
+        [88] Yet we must never desert the appearance of each of these phenomena, and further, as regards what is associated with it, must distinguish those things whose production in several ways is not contradicted by phenomena on earth.
+    </td>
+</tr>
+<tr>
+    <td>
+        Κόσμος ἐστὶ περιοχή τις οὐρανοῦ, ἄστρα τε καὶ γῆν καὶ πάντα τὰ φαινόμενα περιέχουσα, οὖ λυομένου πάντα τὰ ἐν αὐτῷ σύγχυσιν λήψεται, ἀποτομὴν ἔχουσα ἀπὸ τοῦ ἀπείρου καὶ καταλήγουσα ἐν πέρατι ἢ ἀραιῷ ἢ πυκνῷ καὶ ἢ ἐν περιαγομένῳ ἢ ἐν στάσιν ἔχοντι καὶ στρογγύλην ἢ τρίγωνον ἢ οἵαν δή ποτε &lt;ἔχουσα&gt; περιγραφήν.
+    </td>
+    <td> 
+        A world is a circumscribed portion of sky, containing heavenly bodies and an earth and all the heavenly phenomena, whose dissolution will cause all within it to fall into confusion: it is a piece cut off from the infinite and ends in a boundary either rare or dense, either revolving or stationary: its outline may be spherical or three-cornered, or any kind of shape.
+    </td>
+</tr>
+<tr>
+    <td>
+        πανταχῶς γὰρ ἐνδέχεται·
+    </td>
+    <td> 
+        For all such conditions are possible,
+    </td>
+</tr>
+<tr>
+    <td>
+        τῶν γὰρ φαινομένων οὐδὲν ἀντιμαρτυρεῖ &lt;έν&gt; τῷδε τῷ κόσμῳ, ἐν ᾧ λῆγον οὐκ ἔστι καταλαβεῖν.
+    </td>
+    <td> 
+        seeing that no phenomenon is evidence against this in our world, in which it is not possible to perceive an ending.
+    </td>
+</tr>
+<tr>
+    <td>
+        [89] ὅτι δὲ καὶ τοιοῦτοι κόσμοι εἰσὶν ἄπειροι τὸ πλῆθος, ἔστι καταλαβεῖν, καὶ ὅτι καὶ ὁ τοιοῦτος δύναται κόσμος γίνεσθαι καὶ ἐν κόσμῳ καὶ &lt;ἐν&gt; μετακοσμίῳ, ὃ λέγομεν μεταξὺ κόσμων διάστημα, ἐν πολυκένῳ τόπῳ καὶ οὐκ ἐν μεγάλῳ εἰλικρινεῖ καὶ κενῷ, καθάπερ τινὲς φασίν, ἐπιτηδείων τινῶν σπερμάτων ῥυέντων ἀφ᾽ ἑνὸς κόσμου ἢ μετακοσμίου ἢ καὶ ἀπὸ πλειόνων κατὰ μικρὸν προσθέσεις τε καὶ διαρθρώσεις καὶ μεταστάσεις ποιούντων ἐπ᾽ ἄλλον τόπον, ἐὰν οὕτω τύχῃ, καὶ ἐπαρδεύσεις ἐκ τῶν ἐχόντων ἐπιτηδείως ἕως τελειώσεως καὶ διαμονὴν ἐφ᾽ ὅσον τὰ ὑποβληθέντα θεμέλια τὴν προσδοχὴν δύναται ποιεῖσθαι.
+    </td>
+    <td> 
+        [89] And that such worlds are infinite in number we can sure, and also that such a world may come into being both inside another world and in an interworld, by which we mean a space between worlds; it will be in a place with much void, and not in a large empty space quite void, as some say: this occurs when seeds of the right kind have rushed in from a single world or interworld, or from several: little by little they make junctions and articulations, and cause changes of position to another place, as it may happen, and produce irrigations of the appropriate matter until the period of completion and stability, which lasts as long as the underlying foundations are capable of receiving additions.
+    </td>
+</tr>
+<tr>
+    <td>
+        [90] οὐ γὰρ ἀθροισμὸν δεῖ μόνον γενέσθαι οὐδὲ δῖνον ἐν ᾧ ἐνδέχεται κόσμον γίνεσθαι κενῷ κατὰ τὸ δοξαζόμενον ἐξ ἀνάγκης αὔξεσθαί τε, ἕως ἂν ἑτέρῳ προσκρούσῃ, καθάπερ τῶν φυσικῶν καλουμένων φησί τις.
+    </td>
+    <td> 
+        [90] For it is not merely necessary for a gathering of atoms to take place, nor indeed for a whirl and nothing more to be set in motion, as is supposed, by necessity, in an empty space in which it is possible for a world to come into being, nor can the world go on increasing until it collides with another world, as one of the so-called physical philosophers says.
+    </td>
+</tr>
+<tr>
+    <td>
+        τοῦτο γὰρ μαχόμενόν ἐστι τοῖς φαινομένοις.
+    </td>
+    <td> 
+        For this is a contradiction of phenomena.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ἥλιός τε καὶ σελήνη καὶ τὰ λοιπὰ ἄστρα &lt;οὐ&gt; καθ᾽ ἑαυτὰ γενόμενα ὕστερον ἐμπεριελαμβάνετο ὑπὸ τοῦ κόσμου, ἀλλ᾽ εὐθὺς διεπλάττετο καὶ αὔξησιν ἐλάμβανεν κατὰ προσκρίσεις καὶ δινήσεις λεπτομερῶν τινων φύσεων, ἤτοι πνευματικῶν ἢ πυροειδῶν ἢ τὸ συναμφότερον·
+    </td>
+    <td> 
+        Sun and moon and the other stars were not created by themselves and subsequently taken in by the world, but were fashioned in it from the first and gradually grew in size by the aggregations and whirlings of bodies of minute parts, either windy or fiery or both,
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ γὰρ ταῦτα οὕτως ἡ αἴσθησις ὑποβάλλει.
+    </td>
+    <td> 
+        for this is what our sensation suggests.
+    </td>
+</tr>
+<tr>
+    <td>
+        [91] τὸ δὲ μέγεθος ἡλίου τε &lt;καὶ σελήνης&gt; καὶ τῶν λοιπῶν ἄστρων κατὰ μὲν τὸ πρὸς ἡμᾶς τηλικοῦτόν ἐστιν ἡλίκον φαίνεται·
+    </td>
+    <td> 
+        [91] The size of sun (and moon) and the other stars is for us what it appears to be; 
+    </td>
+</tr>
+<tr>
+    <td>
+        κατὰ δὲ τὸ καθ᾽ αὑτὸ ἤτοι μεῖζον τοῦ ὁρωμένου ἢ μικρῷ ἔλαττον ἢ τηλικοῦτον.
+    </td>
+    <td> 
+        and in reality it is either (slightly) greater than what we see or slightly less or the same size:
+    </td>
+</tr>
+<tr>
+    <td>
+        οὕτω γὰρ καὶ τὰ παρ᾽ ἡμῖν πυρὰ ἐξ ἀποστήματος θεωρούμενα κατὰ τὴν αἴσθησιν θεωρεῖται.
+    </td>
+    <td> 
+        for so too fires on earth when looked at from a distance seem to the senses.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ πᾶν δὲ ἑἰς τοῦτο τὸ μέρος ἔνστημα ῥᾳδίως διαλυθήσεται, ἐάν τις τοῖς ἐναργήμασι προσέχῃ, ὅπερ ἐν τοῖς περὶ φύσεως βυβλίοις δείκνυμεν.
+    </td>
+    <td> 
+        And every objection at this point will easily be dissipated, if we pay attention to the clear vision, as I show in my books about nature.
+    </td>
+</tr>
+<tr>
+    <td>
+        [92] ἀνατολὰς καὶ δύσεις ἡλίου καὶ σελήνης καὶ τῶν λοιπῶν ἄστρων καὶ κατὰ ἄναψίν γενέσθαι δύνασθαι καὶ κατὰ σβέσιν, τοιαύτης οὔσης περιστάσεως καὶ καθ᾽ ἑκατέρους τοὺς τόπους ὥστε τὰ προειρημένα ἀποτελεῖσθαι·
+    </td>
+    <td> 
+        [92] The risings and settings of the sun, moon, and other heavenly bodies may be due to kindling and extinction, the composition of the surrounding matter at the places of rising and setting being such as to lead to these results:
+    </td>
+</tr>
+<tr>
+    <td>
+        οὐδὲν γὰρ τῶν φαινομένων ἀντιμαρτυρεῖ.
+    </td>
+    <td> 
+        for nothing in phenomena is against it.
+    </td>
+</tr>
+<tr>
+    <td>
+        &lt;καὶ&gt; κατ᾽ ἐκφάνειάν τε ὑπὲρ γῆς καὶ πάλιν ἐπιπροσθέτησιν τὸ προεἰρημένον δύναιτ᾽ ἂν συντελεῖσθαι·
+    </td>
+    <td> 
+        Or again, the effect in question might be produced by their appearance over the top of the earth, and again the interposition of the earth in front of them:
+    </td>
+</tr>
+<tr>
+    <td>
+        οὐδὲ γάρ τι τῶν φαινομένων ἀντιμαρτυρεῖ.
+    </td>
+    <td> 
+        for once more nothing in phenomena is against it.
+    </td>
+</tr>
+<tr>
+    <td>
+        τάς τε κινήσεις αὐτῶν οὐκ ἀδύνατον μὲν γίνεσθαι κατὰ τὴν τοῦ ὅλου οὐρανοῦ δίνην, ἢ τούτου μὲν στάσιν, αὐτῶν δὲ δίνην κατὰ τὴν ἐξ ἀρχῆς ἐν τῇ γενέσει τοῦ κόσμου ἀνάγκην ἀπογεννηθεῖσαν ἐπ᾽ ἀνατολῇ·
+    </td>
+    <td> 
+        Their motions may not impossibly be due to the revolution of the whole heaven, or else it may remain stationary, and they may revolve owing to the natural impulse towards the east, which was produced at the beginning of the world.....
+    </td>
+</tr>
+<tr>
+    <td>
+        [93]
+    </td>
+    <td> 
+        [93]
     </td>
 </tr>
 </table>
