--- a/Letter_to_Pythocles_Usener.html
+++ b/Letter_to_Pythocles_Usener.html
@@ -66,12 +66,12 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 [89] Ὄτι δὲ καὶ τοιοῦτοι κόσμοι εἰσὶν ἄπειροι τὸ πλῆθος, ἔστι καταλαβεῖν, καὶ ὅτι καὶ ὁ τοιοῦτος δύναται κόσμος γίνεσθαι καὶ ἐν κόσμῳ καὶ μετακοσμίῳ, ὃ λέγομεν μεταξὺ κόσμων διάστημα, ἐν πολυκένῳ τόπῳ καὶ οὐκ ἐν μεγάλῳ εἰλικρινεῖ καὶ κενῷ, καθά περ τινὲς φασίν, ἐπιτηδείων τινῶν σπερμάτων ῥυέντων ἀφ᾽ ἑνὸς κόσμου ἢ μετακοσμίου ἢ καὶ ἀπὸ πλειόνων κατὰ μικρὸν προσθέσεις τε καὶ διαρθρώσεις καὶ μεταστάσεις ποιούντων ἐπ᾽ ἄλλον τόπον, ἐὰν οὕτω τύχῃ, καὶ ἐπαρδεύσεις ἐκ τῶν ἐχόντων ἐπιτηδείως ἕως τελειώσεως καὶ διαμονὴν ἐφ᾽ ὅσον τὰ ὑποβληθέντα θεμέλια τὴν προσδοχὴν δύναται ποιεῖσθαι.
 
-[90] οὐ γὰρ ἀθροισμὸν δεῖ μόνον γενέσθαι οὐδὲ δῖνον ἐν ᾧ ἐνδέχεται κόσμον γίνεσθαι κενῷ κατὰ τὸ δοξαζόμενον ἐξ ἀνάγκης αὔξεσθαί τε, ἕως ἂν ἑτέρῳ προσκρούσῃ, καθά περ τῶν φυσικῶν καλουμένων φησί τις. τοῦτο γὰρ μαχόμενόν ἐστι τοῖς φαινομένοις.
+[90] οὐ γὰρ ἀθροισμὸν δεῖ μόνον γενέσθαι οὐδὲ δῖνον ἐν ᾧ ἐνδέχεται κόσμον γίνεσθαι κενῷ κατὰ τὸ δοξαζόμενον ἐξ ἀνάγκης αὔξεσθαί τε, ἕως ἂν ἑτέρῳ προσκρούσῃ, καθά περ τῶν φυσικῶν καλουμένων φησί τις.
+
+τοῦτο γὰρ μαχόμενόν ἐστι τοῖς φαινομένοις.
 </p>
 <p class="indent">
-Ἥλιός τε καὶ σελήνη καὶ τὰ λοιπὰ ἄστρα &lt;οὐ&gt; καθ᾽ ἑαυτὰ γενόμενα ὕστερον ἐμπεριελαμβάνετο ὑπὸ τοῦ κόσμου.
-
-ἀλλ᾽ εὐθὺς διεπλάττετο καὶ αὔξησιν ἐλάμβανεν κατὰ προσκρίσεις καὶ δινήσεις λεπτομερῶν τινων φύσεων, ἤτοι πνευματικῶν ἢ πυροειδῶν ἢ τὸ συναμφότερον·
+Ἥλιός τε καὶ σελήνη καὶ τὰ λοιπὰ ἄστρα &lt;οὐ&gt; καθ᾽ ἑαυτὰ γενόμενα ὕστερον ἐμπεριελαμβάνετο ὑπὸ τοῦ κόσμου, ἀλλ᾽ εὐθὺς διεπλάττετο καὶ αὔξησιν ἐλάμβανεν κατὰ προσκρίσεις καὶ δινήσεις λεπτομερῶν τινων φύσεων, ἤτοι πνευματικῶν ἢ πυροειδῶν ἢ τὸ συναμφότερον·
 
 καὶ γὰρ ταῦτα οὕτως ἡ αἴσθησις ὑποβάλλει.
 
