--- a/Letter_to_Pythocles_Bailey_Bilingual (master).html
+++ b/Letter_to_Pythocles_Bailey_Bilingual (master).html
@@ -282,7 +282,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        τάς τε κινήσεις αὐτῶν οὐκ ἀδύνατον μὲν γίνεσθαι κατὰ τὴν τοῦ ὅλου οὐρανοῦ δίνην, ἢ τούτου μὲν στάσιν, αὐτῶν δὲ δίνην κατὰ τὴν ἐξ ἀρχῆς ἐν τῇ γενέσει τοῦ κόσμου ἀνάγκην ἀπογεννηθεῖσαν ἐπ᾽ ἀνατολῇ·
+        τάς τε κινήσεις αὐτῶν οὐκ ἀδύνατον μὲν γίνεσθαι κατὰ τὴν τοῦ ὅλου οὐρανοῦ δίνην, ἢ τούτου μὲν στάσιν, αὐτῶν δὲ δίνην κατὰ τὴν ἐξ ἀρχῆς ἐν τῇ γενέσει τοῦ κόσμου ἀνάγκην ἀπογεννηθεῖσαν ἐπ᾽ ἀνατολῇ· *****
     </td>
     <td> 
         Their motions may not impossibly be due to the revolution of the whole heaven, or else it may remain stationary, and they may revolve owing to the natural impulse towards the east, which was produced at the beginning of the world.....
@@ -290,10 +290,66 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [93]
+        [93] τάτῃ θερμασιᾳ κατά τινα ἐπινέμησιν τοῦ πυρὸς ἀεὶ ἐπὶ τοὺς ἑξῆς τόπους ἰόντος.
     </td>
     <td> 
-        [93]
+        [93] by an excessive heat owing to a spreading of the fire which is always moving on to the regions nearest in succession.
+    </td>
+</tr>
+<tr>
+    <td>
+        τροπὰς ἡλίου καὶ σελήνης ἐνδέχεται μὲν γίνεσθαι κατὰ λόξωσιν οὐρανοῦ οὕτω τοῖς χρόνοις κατηναγκασμένου·
+    </td>
+    <td> 
+        The tropics of sun and moon may be caused owing to an obliquity of the whole heaven, which is constrained into this position in the successive seasons;
+    </td>
+</tr>
+<tr>
+    <td>
+        ὁμοίως δὲ καὶ κατὰ ἀέρος ἀντέξωσιν ἢ καὶ ὕλης ἀεὶ ἐπιτηδείας ἐχομένως ἐμπιπραμένης, τῆς δ᾽ ἐκλειπούσης·
+    </td>
+    <td> 
+        or equally well by an outward impulsion of a current of air, or because the appropriate material successively catches fire, as the former fails;
+    </td>
+</tr>
+<tr>
+    <td>
+        ἢ καὶ ἐξ ἀρχῆς τοιαύτην δίνην κατειληθῆναι τοῖς ἄστροις τούτοις, ὥσθ᾽ οἷόν τιν᾽ ἕλικα κινεῖσθαι.
+    </td>
+    <td> 
+        or again, from the beginning this particular form of revolution may have been assigned to these stars, so that they move in a kind of spiral.
+    </td>
+</tr>
+<tr>
+    <td>
+        πᾶντα γὰρ τὰ τοιαῦτα καὶ τὰ τούτοις συγγενῆ οὐθενὶ τῶν ἐναργημάτων διαφωνεῖ, ἐάν τις ἀεὶ ἐπὶ τῶν τοιούτων μερῶν ἐχόμενος τοῦ δυνατοῦ εἰς τὸ σύμφωνον τοῖς φαινομένοις ἕκαστον τούτων δύνηται ἀνάγειν, μὴ φοβούμενος τὰς ἀνδραποδώδεις ἀστρολόγων τεχνιτείας.
+    </td>
+    <td> 
+        For all these and kindred explanations are not at variance with any clear-seen facts, if one always clings in such departments of inquiry to the possible and can refer each point to what is in agreement with phenomena without fearing the slavish artifices of the astronomers.
+    </td>
+</tr>
+<tr>
+    <td>
+        [94] Κένωσεις τε σελήνης καὶ πάλιν πλήρωσεις καὶ κατὰ στροφὴν τοῦ σώματος τούτου δύναιντ᾽ ἂν γίνεσθαι καὶ κατὰ σχηματισμοὺς ἀέρος ὁμοίως, ἔτι τε καὶ κατα προσθετήσεις καὶ κατὰ πάντας τρόπους, καθ᾽ οὓς καὶ τὰ παρ᾽ ἡμῖν φαινόμενα ἐκκαλεῖται εἰς τὰς τούτου τοῦ εἴδους ἀποδόσεις, ἐὰν μή τις τὸν μοναχῇ τρόπον κατηγαπηκὼς τοὺς ἄλλους κενῶς ἀποδοκιμάζῃ, οὐ τεθεωρηκὼς τί δυνατὸν ἀνθρώπῳ θεωρῆσαι καὶ τί ἀδύνατον, καὶ διὰ τοῦτο ἀδύνατα θεωρεῖν ἐπιθυμῶν.
+    </td>
+    <td> 
+        [94] The wanings of the moon and its subsequent waxings might be due to the revolution of its own body, or equally well to successive conformations of the atmosphere, or again to the interposition of other bodies; they may be accounted for in all the ways in which phenomena on earth invite us to such explanations of these phases; provided only one does not become enamoured of the method of the single cause and groundlessly put the others out of court, without having considered what it is possible for a man to observe and what is not, and desiring therefore to observe what is impossible.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἔτι τε ἐνδέχεται τὴν σελήvnv ἐξ ἑαυτῆς ἔχειν τὸ φῶς, ἐνδέχεται δὲ ἀπὸ τοῦ ἡλίου.
+    </td>
+    <td> 
+        Next the moon may have her light from herself or from the sun.
+    </td>
+</tr>
+<tr>
+    <td>
+        [95]
+    </td>
+    <td> 
+        [95]
     </td>
 </tr>
 </table>
