--- a/Letter_to_Pythocles_Bailey_Bilingual (master).html
+++ b/Letter_to_Pythocles_Bailey_Bilingual (master).html
@@ -346,10 +346,154 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [95]
+        [95] καὶ γὰρ παρ᾽ ἡμῖν θεωρεῖται πολλὰ μὲν ἐξ ἑαυτῶν ἔχοντα, πολλὰ δὲ ἀφ᾽ ἑτέρων.
     </td>
     <td> 
-        [95]
+        [95] For on earth too we see many things shining with their own, and many with reflected light.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ οὐθὲν ἐμποδοστατεῖ τῶν ἐν τοῖς μετεώροις φαινομένων, ἐάν τις τοῦ πλεοναχοῦ τρόπου ἀεὶ μνήμην ἔχῃ καὶ τὰς ἀκολούθους αὐτοῖς ὑποθέσεις ἅμα καὶ αἰτίας συνθεωρῇ καὶ μὴ ἀναβλέπων εἰς τὰ ἀνακόλουθα ταῦτ᾽ ὀγκοῖ ματαίως καὶ καταρρέπῃ ἄλλοτε ἄλλως ἐπὶ τὸν μοναχὸν τρόπον.
+    </td>
+    <td> 
+        Nor is any celestial phenomenon against these explanations, if one always remembers the method of manifold causes and investigates hypotheses and explanations consistent with them, and does not look to inconsistent notions and emphasize them without cause and so fall back in difierent ways on different occasions on the method of the single cause.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἡ δὲ ἔμφασις τοῦ προσώπου ἐν αὐτῇ δύναται μὲν γίνεσθαι καὶ κατὰ παραλλαγὴν μερῶν καὶ κατ᾽ ἐπιπροσθέτησιν, καὶ ὅσοι ποτ᾽ ἂν τρόποι θεωροῖντο τὸ σύμφωνον τοῖς φαινομένοις κεκτημένοι.
+    </td>
+    <td> 
+        The impression of a face in the moon may be due to the variation of its parts or to interposition or to any one of many causes which might be observed, all in harmony with phenomena.
+    </td>
+</tr>
+<tr>
+    <td>
+        [96] ἐπὶ πάντων γὰρ τῶν μετεώρων τὴν τοιαύτην ἰχνεύειν οὐ προετέον.
+    </td>
+    <td> 
+        [96] For in the case of all celestial phenomena this process of investigation must never be abandoned;
+    </td>
+</tr>
+<tr>
+    <td>
+        ἢν γάρ τις ᾖ μαχόμενος τοῖς ἐναργήμασιν, οὐδέποτε μὴ δυνήσεται ἀταραξίας γνησίου μεταλαβεῖν.
+    </td>
+    <td> 
+        for if one is in opposition to clear-seen facts, he can never have his part in true peace of mind.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ἔκλειψις ἡλίου καὶ σελήνης δύναται μὲν γίνεσθαι καὶ κατὰ σβέσιν, καθάπερ καὶ παρ᾽ ἡμῖν τοῦτο θεωρεῖται γινόμενον·
+    </td>
+    <td> 
+        The eclipse of sun and moon may take place both owing to their extinction, as we see this effect is produced on earth, 
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ ἤδη κατ᾽ ἐπιπροσθέτησιν ἄλλων τινῶν, ἢ γῆς ἢ ἀοράτου τινὸς ἤ ἑτέρου τοιούτου.
+    </td>
+    <td> 
+        or again by the interposition of some other bodies, either the earth or some unseen body or something else of this sort.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ ὧδε τοὺς οἰκείους ἀλλήλοις τρόπους συνθεωρητέον, καὶ τὰς ἅμα συγκυρήσεις τινῶν ὅτι οὐκ ἀδύνατον γίνεσθαι.
+    </td>
+    <td> 
+        And in this way we must consider together the causes that suit with one another and realize that it is not impossible that some should coincide at the same time.
+    </td>
+</tr>
+<tr>
+    <td>
+        [97] ἔτι τε τάξις περιόδου, καθάπερ ἔνια καὶ παρ᾽ ἡμῖν τῶν τυχόντῶν γίνεται, λαμβανέσθω·
+    </td>
+    <td> 
+        [97] Next the regularity of the periods of the heavenly bodies must be understood in the same way as such regularity is seen in some of the events that happen on earth.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ ἡ θεία φύσις πρὸς ταῦτα μηδαμῇ προσαγέσθω, ἀλλ᾽ ἀλειτούργητος διατηρείσθω καὶ ἐν τῇ πάσῃ μακαριότητι.
+    </td>
+    <td> 
+        And do not let the divine nature be introduced at any point into these considerations, but let it be preserved free from burdensome duties and in entire blessedness.
+    </td>
+</tr>
+<tr>
+    <td>
+        ὡς εἰ τοῦτο μὴ πραχθήσεται, ἅπασα ἡ τῶν μετεώρων αἰτιολογία ματαία ἔσται, καθάπερ τισὶν ἤδη ἐγένετο οὐ δυνατοῦ τρόπου ἐφαψαμένοις, εἰς δὲ τὸ μάταιον ἐκπεσοῦσι τὸ καθ᾽ ἕνα τρόπον μόνον οἴεσθαι γίνεσθαι, τοὺς δ᾽ ἄλλους πάντας τοὺς κατὰ τὸ ἐνδεχόμενον ἐκβάλλειν εἴς τε τὸ ἀδιανόητον φερομένους καὶ τὰ φαινόμενα, ἃ δεῖ σημεῖα ἀποδέχεσθαι, μὴ δυναμένους συνθεωρεῖν.
+    </td>
+    <td> 
+        For if this principle is not observed, the whole discussion of causes in celestial phenomena is in vain, as it has already been for certain persons who have not clung to the method of possible explanations, but have fallen back on the useless course of thinking that things could only happen in one way, and of rejecting all other ways in harmony with what is possible, being driven thus to what is inconceivable and being unable to compare earthly phenomena, which we must accept as indications.
+    </td>
+</tr>
+<tr>
+    <td>
+        [98] Μήκη νυκτῶν καὶ ἡμερῶν παραλλάττοντα καὶ παρὰ τὸ ταχείας ἡλίου κινήσεις γίνεσθαι καὶ πάλιν βραδείας ὑπὲρ γῆς, παρὰ τὸ μήκη τόπων παραλλάττοντα &lt;διιέναι&gt; καὶ &lt;παρα τὸ&gt; τόπους τινὰς περαιοῦν τάκιον ἤ βραδύτερον, ὡς καὶ παρ᾽ ἡμῖν τινα θεωρεῖται, οἷς συμφώνως δεῖ λέγειν ἐπὶ τῶν μετεώρων.
+    </td>
+    <td> 
+        [98] The successive changes in the length of nights and days may be due to the fact that the sun’s movements above the earth become fast and then slow again because he passes across regions of unequal length or because he traverses some regions more quickly or more slowly, &lt;or again to the quicker or slower gathering of the fires that make the sun&gt;, as we observe occurs with some things on earth, with which we must be in harmony in speaking of celestial phenomena.
+    </td>
+</tr>
+<tr>
+    <td>
+        οἱ δὲ τὸ ἕν λαμβάνοντες τοῖς τε φαινομένοις μάχονται καὶ τοῦ εἰ δυνατὸν ἀνθρώπῳ θεωρῆσαι διαπεπτώκασιν.
+    </td>
+    <td> 
+        But those who assume one cause fight against the evidence of phenomena and fail to ask whether it is possible for men to make such observations.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ἐπισημασίαι δύνανται γίνεσθαι καὶ κατὰ συγκυρήσεις καιρῶν, καθάπερ ἐν τοῖς ἐμφανέσι παρ᾽ ἡμῖν ζῴοις, καὶ παρ᾽ ἑτεροιώσεις ἀέρος καὶ μεταβολάς·
+    </td>
+    <td> 
+        Signs of the weather may occur owing to the coincidence of occasions, as happens with animals we can all see on earth, and also through alterations and changes in the atmosphere.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἀμφότερα γὰρ ταῦτὰ οὐ μάχεται τοῖς φαινομένοις·
+    </td>
+    <td> 
+        For both these are in accordance with phenomena.
+    </td>
+</tr>
+<tr>
+    <td>
+        [99] ἐπὶ δὲ ποίοις παρὰ τοῦτο ἢ τοῦτο τὸ αἴτιον γίνεται, οὐκ ἔστι συνιδεῖν.
+    </td>
+    <td> 
+        [99] But under what circumstances the cause is produced by this or that, we cannot perceive.
+    </td>
+</tr>
+<tr>
+    <td>
+        Νέφη δύναται γίνεσθαι καὶ συνίστασθαι καὶ παρὰ πιλήσεις ἀέρος &lt;κατὰ&gt; πνευμάτων συνώσεις καὶ παρὰ περιπλοκὰς ἀλληλούχων ἀτόμων καὶ ἐπιτηδείων εἰς τὸ τοῦτο τελέσαι καὶ κατὰ ῥευμάτων συλλογὴν ἀπό τε γῆς καὶ ὑδάτων·
+    </td>
+    <td> 
+        Clouds may be produced and formed both by the condensation of the atmosphere owing to compression by winds and by the interlacing of atoms clinging to one another and suitable for producing this result, and again by the gathering of streams from earth and the waters:
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ κατ᾽ ἄλλους δὲ τρόπους πλείους αἱ τῶν τοιούτων συστάσεις οὐκ ἀδυνατοῦσι συντελεῖσθαι.
+    </td>
+    <td> 
+        and there are several other ways in which the formation of such things may not impossibly be brought about.
+    </td>
+</tr>
+<tr>
+    <td>
+        ἤδη δ᾽ ἀπ᾽ αὐτῶν ᾗ μὲν θλιβομένων, ᾗ δὲ μεταβαλλόντων ὕδατα δύναται συντελεῖσθαι,
+    </td>
+    <td> 
+        And from them again rain may be produced if they are squeezed in one part or changed in another,
     </td>
 </tr>
 </table>
