--- a/Letter_to_Pythocles_Bailey_Bilingual (master).html
+++ b/Letter_to_Pythocles_Bailey_Bilingual (master).html
@@ -496,6 +496,86 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
         And from them again rain may be produced if they are squeezed in one part or changed in another,
     </td>
 </tr>
+<tr>
+    <td>
+        [100] ἔτι τε πνευμάτων καταφορᾷ ἀπὸ ἐπιτηδείων τόπων καὶ δι᾽ ἀέρος κινουμένων, βιαιοτέρας ἐπαρδεύσεως γινομένης ἀπό τινων ἀθροισμάτων ἐπιτηδείων εἰς τὰς τοιαύτας ἐπιπέμψεις.
+    </td>
+    <td> 
+        [100] or again by a downward current of wind moving through the atmosphere from appropriate places, a more violent shower being produced from certain conglomerations of atoms suited to create such downfalls.
+    </td>
+</tr>
+<tr>
+    <td>
+        Βροντὰς ἐνδέχεται γίνεσθαι καὶ κατὰ πνεύματος ἐν τοῖς κοιλώμασι τῶν νεφῶν ἀνείλησιν, καθάπερ ἐν τοῖς ἡμετέροις ἀγγείοις, καὶ παρὰ πυρὸς πεπνευματωμένου βόμβον ἐν αὐτοῖς, καὶ κατὰ ῥήξεις δὲ νεφῶν καὶ διαστάσεις, καὶ κατὰ παρατρίψεις νεφῶν καὶ κατάξεις πῆξιν εἰληφότων κρυσταλλοειδῆ·
+    </td>
+    <td> 
+        Thunder may be produced by the rushing about of wind in the hollows of the clouds, as happens in vessels on earth, or by the reverberation of fire filled with wind inside them, or by the rending and tearing of clouds, or by the friction and bursting of clouds when they have been congealed into a form like ice:
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ τὸ ὅλον καὶ τοῦτο τὸ μέρος πλεοναχῶς γίνεσθαι λέγειν ἐκκαλεῖται τὰ φαινόμενα.
+    </td>
+    <td> 
+        phenomena demand that we should say that this department of celestial events, just like them all, may be caused in several ways.
+    </td>
+</tr>
+<tr>
+    <td>
+        [101] Καὶ ἀστραπαὶ δ᾽ ὡσαύτως γίνονται κατὰ πλείους τρόπους·
+    </td>
+    <td> 
+        [101] And lightnings too are produced in several ways:
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ γὰρ κατὰ παράτριψιν καὶ σύγκρουσιν νεφῶν ὁ πυρὸς ἀποτελεστικὸς σχηματισμὸς ἐξολισθαίνων ἀστραπὴν γεννᾷ·
+    </td>
+    <td> 
+        for both owing to the friction and collision of clouds a conformation of atoms which produces fire slips out and gives birth to the lightning, 
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ κατ᾽ ἐκριπισμὸν ἐκ τῶν νεφῶν ὑπὸ πνευμάτων τῶν τοιούτων σωμάτων ἃ τὴν λαμπηδόνα ταύτην παρασκευάζει, καὶ κατ᾽ ἐκπιασμόν, θλίψεως τῶν νεφῶν γινομένης εἴθ᾽ ὑπ᾽ ἀλλήλων εἴθ᾽ ὑπὸ πνευμάτων·
+    </td>
+    <td> 
+        and owing to wind bodies which give rise to this flash are dashed from the clouds: or compression may be the cause, when clouds are squeezed either by one another or by the wind.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ κατ᾽ ἐμπερίληψιν δὲ τοῦ ἀπὸ τῶν ἄστρων κατεσπειραμένου φωτός, εἶτα συνελαυνομένου ὑπὸ τῆς κινήσεως νεφῶν τε καὶ πνευμάτων καὶ διεκπίπτοντος διὰ τῶν νεφῶν·
+    </td>
+    <td> 
+        Or again it may be that the light scattered abroad from the heavenly bodies is taken in by the clouds, and then is driven together by the movement of the clouds and wind, and falls out through the clouds;
+    </td>
+</tr>
+<tr>
+    <td>
+        ἢ κατὰ διήθησιν &lt;διὰ&gt; τῶν νεφῶν τοῦ λεπτομερεστάτου φωτὸς, ᾖ ἀπὸ τοῦ πυρὸς νέφη συνεφλέχθαι καὶ τὰς βροντὰς ἀποτελεῖσθαι κατὰ τὴν τούτου κίνησιν·
+    </td>
+    <td> 
+        or else light composed of most subtle particles may filter through the clouds, whereby the clouds may be set on fire by the flame and thunder produced by the movement of the fire.
+    </td>
+</tr>
+<tr>
+    <td>
+        καὶ κατὰ τὴν τοῦ πνεύματος ἐκπύρωσιν τὴν γινομένην διά τε συντονίαν φορᾶς καὶ διὰ σφοδρὰν κατείλησιν·
+    </td>
+    <td> 
+        Or the wind may be fired owing to the strain of motion and its violent rotation,
+    </td>
+</tr>
+<tr>
+    <td>
+        [102]
+    </td>
+    <td> 
+        [102]
+    </td>
+</tr>
 </table>
 </body>
 </html>
