--- a/Letter_to_Pythocles_Usener.html
+++ b/Letter_to_Pythocles_Usener.html
@@ -161,8 +161,7 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 
 καὶ κατ᾽ ἐκριπισμὸν ἐκ τῶν νεφῶν ὑπὸ πνευμάτων τῶν τοιούτων σωμάτων ἃ τὴν λαμπηδόνα ταύτην παρασκευάζει, καὶ κατ᾽ ἐκπιασμόν, θλίψεως τῶν νεφῶν γινομένης εἴ θ᾽ ὑπ᾽ ἀλλήλων εἴ θ᾽ ὑπὸ πνευμάτων·
 
-καὶ κατ᾽ ἐμπερίληψιν δὲ τοῦ ἀπὸ τῶν ἄστρων κατεσπειραμένου φωτός, εἶτα συνελαυνομένου ὑπὸ τῆς κινήσεως νεφῶν τε καὶ 
-πνευμάτων καὶ διεκπίπτοντος διὰ τῶν νεφῶν·
+καὶ κατ᾽ ἐμπερίληψιν δὲ τοῦ ἀπὸ τῶν ἄστρων κατεσπειραμένου φωτός, εἶτα συνελαυνομένου ὑπὸ τῆς κινήσεως νεφῶν τε καὶ πνευμάτων καὶ διεκπίπτοντος διὰ τῶν νεφῶν·
 
 ἢ κατὰ διήθησιν &lt;διὰ&gt; τῶν νεφῶν τοῦ λεπτομερεστάτου φωτὸς καὶ τὴν τούτου κίνησιν·
 
